== Version 2.7.5 Work in progress (not released -- this is a draft) ==

   TODO: compile .po (creme_config)

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # The job which sends notification emails has been improved to remove line breaks in subject.
          Line breaks were avoiding the mails to be sent.


== Version 2.7.4 ==

  Users side :
  ------------
    # Apps :
        * Creme_config :
            - In configuration for CustomForms, the removing of a fields was broken
              when there is a special group (like "Addresses").
            - In configuration for CustomFields, the models were not ordered by name as usual.
        * Reports :
            - A user needs the permission to export a model in order to export a Report now.

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # An issue with 'creme_core.forms.enumerable.EnumerableSelectMultiple' has been fixed;
          in the context, the selected value was handled as a string instead of a list.


== Version 2.7.3 ==

  UPGRADE NOTES :
    - Do not forget to tun the command "generatemedia".

  Users side :
  ------------
    # Some styling issue in list-view with hidden cells in last position
      (like 'billing' ones) have been fixed.

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # Some methods have been added to the class
          'creme_core.gui.listview.smart_columns.SmartColumnsRegistry' to unregister things.
        # The context manager 'creme_core.tests.base.OverrideSettingValueContext'
          did not work when the SettingValue does not exist in DB.
        # Apps :
            * Creme_config :
                - The CSS for 'brick.GenericModelBrick' has been improved when the related model has many fields.


== Version 2.7.2 ==

  Users side :
  ------------