@@ -1,6 +1,12 @@
 == Version 2.7.5 Work in progress (not released -- this is a draft) ==
 
-   TODO: compile .po (creme_config)
+   TODO: compile .po (creme_core, creme_config)
+
+  Users side :
+  ------------
+    # Apps :
+        * Recurrents :
+            - A crash when you tried to add a filter has been fixed.
 
   Developers side :
   -----------------
